# ClaudeR

./: .Rbuildignore  .gitignore  DESCRIPTION  Dockerfile  LICENSE  NAMESPACE  NEWS.md  README.md  glama.json  llms-install.md  pyproject.toml
.github/workflows/: fix.yml  shiny-deploy.yaml  shiny-deploy.yaml.disabled
R/: addin.R  commands.R  configure_cli.r  install_cli.r  setup.R  ui.R
assets/: accessing_code.mov  example_walk_through.mov
clauder-mcp/: README.md  pyproject.toml
clauder-mcp/src/clauder_mcp/: __init__.py  server.py
inst/prompts/: data_annotation.md  lab_mode.md  multi_agent.md  r_best_practices.md  reviewer_zero.md
inst/rstudio/: addins.dcf
inst/scripts/: persistent_r_mcp.py
man/: claudeAddin.Rd  claude_rstudio_addin.Rd  configure.Rd  configure_cli.Rd  execute_code_in_session.Rd  install_clauder.Rd  install_cli.Rd  load_claude_settings.Rd  log_code_to_file.Rd  log_error_to_file.Rd  save_claude_settings.Rd  validate_code_security.Rd
src/clauder/: __init__.py  server.py
tests/: test-async-progress-and-windows-safety.R  test-install-cli.R
